objects/Apttus_LWR_assignment_Rule_condition__c.object
<CustomObject>
    <description>This object is used for defining rule conditions for Agreement assignment rules.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Rule condition is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agreement_Assignment_Rule__c</fullName>
        <label>Agreement Assignment Rule</label>
        <referenceTo>Apttus_Agreement_Assignment_Rule__c</referenceTo>
        <relationshipLabel>Agreement Assignment Rule conditions</relationshipLabel>
        <relationshipName>Agreement_Assignment_Rule_conditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus_Join__c</fullName>
        <description>Logic for joining  two condtions.</description>
        <label>Boolean Operator</label>
        <picklist>
            <picklistValues>
                <fullName>And</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Operator__c</fullName>
        <description>Operators to compare values</description>
        <label>Comparison Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals to</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Not equals to</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Field__c</fullName>
        <description>The field for which condition is to be create</description>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_Field__c</fullName>
        <description>Fill related objects criteria like for Opportunity owner  write &apos;Apttus__Related_Opportunity__r.owner</description>
        <label>Relation Field</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <description>sequence for join two conditions</description>
        <label>Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>Value of field for criteria</description>
        <label>Value</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Agreement Assignment Rule condition</label>
    <listViews>
        <fullName>ALL</fullName>
        <columns>NAME</columns>
        <columns>Sequence__c</columns>
        <columns>Agreement_Assignment_Rule__c</columns>
        <columns>Relation_Field__c</columns>
        <columns>Field__c</columns>
        <columns>Apttus_Operator__c</columns>
        <columns>Value__c</columns>
        <columns>Apttus_Join__c</columns>
        <columns>Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>ALL</label>
    </listViews>
    <nameField>
        <displayFormat>AARC-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreement Assignment Rule conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>